# repo-root-template

./: LICENSE  README.md  pyproject.toml
.docs/: copier-template.md  copier.md  notes.md
